modules/infra-network/templates/manifests/istio/public-ingress-gateway.tftmpl.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-ingress-gateway
  namespace: ${istio_namespace}
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: '*.${ingress_domain}'
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: public-ingress-gateway-tls
      allowedRoutes:
        namespaces:
          from: All
